[project]
name = "sada-hotel-agent"
version = "0.1.0"
description = "SADA Hotel Booking Voice Agent — LiveKit voice agent with web client"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "livekit-agents[openai]~=1.6",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
